[package]
name = "loop-http-get"
version = "1.0.2"
rust-version = "1.56"
edition = "2021"
license = "MIT"
description = "Send an HTTP GET every minute."
readme = "README.md"
keywords = ["http", "http-get", "client", "loop", "network"]
categories = ["web-programming::http-client"]
homepage = "https://github.com/WaterLemons2k/loop-http-get"
repository = "https://github.com/WaterLemons2k/loop-http-get"


[dependencies]
minreq = "2.13.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
